@@ -11,6 +11,7 @@ Changelog
  * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
  * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
+ * Fix: Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
 
 2.7 LTS (06.11.2019)
 ~~~~~~~~~~~~~~~~~~~~
